# finanth-audit

./: .dockerignore  .gitignore  ARTIFACT_CARD.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  FINAL_STATUS_REPORT.md  LICENSE-CODE  LICENSE-DATA  Makefile  README.md  REVIEWER_GUIDE.md  SECURITY.md  __init__.py  pyproject.toml  requirements-lock.txt  verify_artifact.py
attacks/: __init__.py  provenance.py
baselines/: __init__.py  provenance_rules.py  public_rules.py  rules.py
docs/: aaai_kdd_overlap_ledger.md  baseline_governance.md  benchmark_card.md  claim_ledger.md  current_artifact_audit.md  data_protocol.md  databento_powered_protocol_v04.md  external_orderbook_protocol_v03.md  external_submission_protocol.md  generator_protocol.md  generator_robustness_protocol.md  kdd_2027_submission_policy.md  kdd_research_questions.md  maintenance.md  metric_protocol.md  negative_results_log.md  openreview_submission_metadata.md  provenance_identifiability.md  public_point_in_time_protocol.md  public_replay_power_protocol.md  real_agent_multitask_protocol_v06.md  real_agent_proposal_protocol_v05.md  real_agent_v06_implementation.md  release_policy.md  reproducibility.md  risk_register.md  submission_handoff.md  submission_scope_freeze.md  test_freeze_protocol.md  test_freeze_protocol_amendment_round_75.md  training_robustness_v03.md  training_utility_protocol.md  training_utility_protocol_amendment_round_71.md  training_utility_report.md
evaluation/: __init__.py  baseline_governance.py  certification_robustness.py  certification_surface.py  cluster_bootstrap.py  holm.py  (+39 more)
(+65 files in other folders)
