[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "finauth-audit"
version = "0.6.0"
description = "Validity-aware benchmark for financial-agent authorization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "tueplots>=0.2",
  "adjustText>=1.3",
  "cryptography>=42.0"
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
figures = ["matplotx>=0.3", "plotnine>=0.15", "pylustrator>=1.3"]
dev = ["ruff>=0.15"]

[tool.setuptools]
packages = [
  "finauth_audit",
  "finauth_audit.attacks",
  "finauth_audit.baselines",
  "finauth_audit.evaluation",
  "finauth_audit.figures",
  "finauth_audit.generators",
  "finauth_audit.release",
]
package-dir = {finauth_audit = "."}
include-package-data = false

[tool.setuptools.package-data]
"finauth_audit.release" = ["release_spec.json"]

[tool.pytest.ini_options]
testpaths = ["release_tests"]
pythonpath = [".."]
